@@ -1,4 +1,5 @@
 - version: unreleased
+- Dynamically added file to cloud, create edit form from uploaded file(@Chino96)
 - Quiz form now displays list of quizes for course(Chino96)
 - Finished quiz edit form using read logic(@Chino96)
 - Changed course/quiz/homework forms also updated corresponding models(@Chino96)
